test/src/e2e_vm_tests/test_programs/should_pass/dca/unused_trait/src/trait.sw
library r#trait;

pub trait Trait {
}
