test/src/e2e_vm_tests/test_programs/should_fail/shadowing/shadowed_types_and_traits/src/lib.sw
library;

pub struct MyStruct1 {}
pub enum MyEnum1 {}
pub trait MyTrait1 {}
abi MyAbi1 {}
